# ReceiptWallet

./: .gitignore  LICENSE  README.md  pyproject.toml
receiptwallet/backend/: __main__.py  api.py  authenticate.py  constants.py
receiptwallet/backend/db/: base.py  create_db.py  get_db.py  groups.py  user.py
receiptwallet/backend/routes/: groups.py  token.py  users.py
receiptwallet/backend/schemas/: product.py  user.py
